change width to height (fix weird stretching issue with thumbnails)

--- a/PSS/wwwroot/css/IndexNew.css
+++ b/PSS/wwwroot/css/IndexNew.css
@@ -5,13 +5,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
     position: absolute;
     left: 145px;
 }
 
 .thumbnail {
-    max-width: 10%;
+    height: 200px;
     margin: 4px;
     cursor: pointer;
 }
